Fix MakeMenu problems for FAB and Webtrees theme only on IE7

--- a/themes/fab/msie.css
+++ b/themes/fab/msie.css
@@ -13,3 +13,7 @@
 a.showit:hover span {
 	filter: alpha(opacity=85);
 }
+
+li {
+display: inline-block;
+}
