--- a/themes/webtrees/msie.css
+++ b/themes/webtrees/msie.css
@@ -34,4 +34,6 @@ a.showit:hover span {
 	filter: alpha(opacity=85);
 }
 
-
+li {
+display: inline-block;
+}
